update qlog and qhttputil

--- a/src/net/njcp/service/util/QLog_zh_CN.properties
+++ b/src/net/njcp/service/util/QLog_zh_CN.properties
@@ -1,12 +1,19 @@
-# QLog.java:197
+# QLog.java:131
+# Added at 2018-05-14 10:29:03.197
+"Debug mode switch file has been set to <{0}>" = "调试模式开关文件已设置为<{0}>"
+
+# QLog.java:141
+# Added at 2018-05-14 10:29:03.197
+"Timer mode switch file has been set to <{0}>" = "计时器模式开关文件已设置为<{0}>"
+
+# QLog.java:194
 # Updated at 2017-10-31 18:35:11.465
 "Processing debug keywords failed." = "获取调试关键字失败."
 
-# QLog.java:232
+# QLog.java:229
 # Updated at 2017-10-31 18:35:11.466
 ", caused by: " = ", 由于:"
 
-# QLog.java:273
+# QLog.java:270
 # Updated at 2017-10-31 18:35:11.467
 "Debug mark sets here." = "调试标记已设置."
-
