--- a/src/net/njcp/service/util/QLog_zh_CN.properties
+++ b/src/net/njcp/service/util/QLog_zh_CN.properties
@@ -1,19 +1,47 @@
-# QLog.java:131
+# QLog.java:369
 # Added at 2018-05-14 10:29:03.197
 "Debug mode switch file has been set to <{0}>" = "调试模式开关文件已设置为<{0}>"
 
-# QLog.java:141
+# QLog.java:385
 # Added at 2018-05-14 10:29:03.197
 "Timer mode switch file has been set to <{0}>" = "计时器模式开关文件已设置为<{0}>"
 
-# QLog.java:194
+# QLog.java:467
 # Updated at 2017-10-31 18:35:11.465
 "Processing debug keywords failed." = "获取调试关键字失败."
 
-# QLog.java:229
+# QLog.java:477
+# Added at 2018-05-22 15:43:02.463
+"{0}.stop" =
+
+# QLog.java:478
+# Added at 2018-05-22 15:43:02.464
+"Debug mode overrun for {0}, about to stop." = "调试模式下运行超过了{0},即将推出调试模式."
+
+# QLog.java:536
 # Updated at 2017-10-31 18:35:11.466
 ", caused by: " = ", 由于:"
 
-# QLog.java:270
+# QLog.java:578
 # Updated at 2017-10-31 18:35:11.467
 "Debug mark sets here." = "调试标记已设置."
+
+# QLog.java:864
+# Added at 2018-05-22 15:43:02.464
+"Using simple class name has been set to <{0}>" = "显示简单类名已设置为<{0}>"
+
+# QLog.java:875
+# Added at 2018-05-22 15:43:02.464
+"Save DEBUG as INFO has been set to <{0}>" = "将DEBUG级保存至INFO级已设置为<{0}>"
+
+# QLog.java:886
+# Added at 2018-05-22 15:43:02.465
+"Save stack trace in log has been set to <{0}>" = "保存Stack trace到日志已设置为<{0}>"
+
+# QLog.java:897
+# Added at 2018-05-22 15:43:02.465
+"Save debug log exclusively has been set to <{0}>" = "单独保存调试模式日志已设置为<{0}>"
+
+# QLog.java:909
+# Added at 2018-05-22 15:43:02.465
+"Overrun threshold has been set to <{0}>" = "调试模式超时时间已设置为<{0}>"
