--- a/src/net/njcp/service/util/QTimer_zh_CN.properties
+++ b/src/net/njcp/service/util/QTimer_zh_CN.properties
@@ -1,24 +1,52 @@
-# QTimer.java:8
+# QTimer.java:13
 # Added at 2017-12-14 09:19:19.841
 "Operation since last timer mark" = "距上一个计时时标的操作"
 
-# QTimer.java:21
+# QTimer.java:26
 # Updated at 2017-10-24 11:04:58.818
 "New timer mark sets here." = "此处已设置新的计时时标."
 
-# QTimer.java:26
+# QTimer.java:31
 # Updated at 2017-10-24 11:04:58.819
 "{0} begins." = "{0}开始."
 
-# QTimer.java:55
+# QTimer.java:60
 # Added at 2017-10-24 11:04:58.822
 "{0} ms" = "{0}毫秒"
 
-# QTimer.java:73
+# QTimer.java:79
 # Updated at 2017-12-14 09:19:19.840
 "{0} takes {1}" = "{0}耗时{1}"
 
-# QTimer.java:76
+# QTimer.java:82
 # Added at 2017-12-14 09:48:11.359
 ",over the upper-limit({0})" = ",已超过上限({0})"
+
+# QTimer.java:129
+# Added at 2018-05-22 15:43:02.622
+"This is {0}launch control, {1}starts in {2} {3}." = "这里是{0}控制中信,{1}将在{2} {3}后开始." 
+
+# QTimer.java:129
+# Added at 2018-05-22 15:43:02.622
+"launching " = 
+
+# QTimer.java:135
+# Added at 2018-05-22 15:43:02.622
+"T minus {0} minutes and counting." = 
+
+# QTimer.java:137
+# Added at 2018-05-22 15:43:02.622
+"T minus {0} seconds and counting." = 
+
+# QTimer.java:140
+# Added at 2018-05-22 15:43:02.623
+"T minus 10 seconds and counting." = 
+
+# QTimer.java:151
+# Added at 2018-05-22 15:43:02.623
+"{0} {1}{2} {3} process interrupted" = 
+
+# QTimer.java:156
+# Added at 2018-05-22 15:43:02.623
+"Load forecast service" = 
 
